ghost-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  blog-sapham
  namespace: sapd
  labels:
    name:  blog-sapham
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  blog-sapham
    spec:
      containers:
      - image:  ghost
        name:  ghost
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        livenessProbe:
          httpGet:
            path: /
            port: 2368
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 2368
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  2368
          name:  ghost-port
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: blog-data
      restartPolicy: Always
      volumes:
        - name: blog-data
          persistentVolumeClaim:
            claimName: blog-data-pvc
